// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tools/list contract > matches the core profile snapshot 1`] = `
[
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "List the built-in role templates that delegate and job_submit accept. Call this first when you want a one-shot agent and do not already have an agentId. Use agent_create to define a persistent agent of your own instead.",
    "name": "agent_template_list",
    "title": "List agent templates",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": false,
      "openWorldHint": false,
      "readOnlyHint": false,
    },
    "description": "Queue work for an agent and return a handle immediately, without waiting for the result. Use it for long work, for fan-out you will collect later, or when the job depends on others finishing first; use delegate when you just want one answer now. Follow up with job_wait and job_get.",
    "name": "job_submit",
    "title": "Submit a job",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "Fetch one job with its state, result and usage. The shape is identical whether the work ran locally or on a remote agent. Use job_wait first if the job may still be running, and events_query for the step-by-step trail.",
    "name": "job_get",
    "title": "Get a job",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "Block until the given jobs finish, or until the timeout expires — at most 60 seconds per call. Call it again if the jobs are still running; it never blocks longer than the protocol allows. Use job_get when you only want the current state without waiting.",
    "name": "job_wait",
    "title": "Wait for jobs",
  },
  {
    "annotations": {
      "destructiveHint": true,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": false,
    },
    "description": "Cancel a queued or running job; for remote jobs this cancels the underlying A2A task too. Already-finished jobs are returned unchanged. Use job_retry to run a cancelled job again.",
    "name": "job_cancel",
    "title": "Cancel a job",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": false,
      "openWorldHint": true,
      "readOnlyHint": false,
    },
    "description": "Run one instruction on the best-matching agent and return the result. This is the everyday tool: reach for it whenever you want a sub-agent to do something and hand the answer back. Use job_submit instead when the work is long, has dependencies, or should run in the background, and agent_template_list to see the roles you can target.",
    "name": "delegate",
    "title": "Delegate an instruction",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "Report orchestrator health, version, active tool profile, queue depth and schema state. Use it to confirm the server is reachable and correctly configured, or to check whether migrations are pending. Not for inspecting individual work — use job_get or job_list for that.",
    "name": "orchestrator_status",
    "title": "Orchestrator status",
  },
]
`;

exports[`tools/list contract > matches the full profile snapshot 1`] = `
[
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": false,
      "openWorldHint": false,
      "readOnlyHint": false,
    },
    "description": "Define a persistent local agent the orchestrator owns, prompts and runs. Use it when the same role is needed across many jobs; for a one-shot task pass a template to delegate instead. Register agents built by other vendors with agent_register, not this tool.",
    "name": "agent_create",
    "title": "Create a local agent",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "List agents known to the orchestrator, local and remote together. Use it to discover what can be delegated to; use agent_get for one agent in full. Throwaway agents created by delegate are hidden unless includeEphemeral is set.",
    "name": "agent_list",
    "title": "List agents",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "Fetch one agent with its configuration and recent jobs. Use it to inspect an agent before delegating to it or to see what it has been doing. Use agent_list to find the id first.",
    "name": "agent_get",
    "title": "Get an agent",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "List the built-in role templates that delegate and job_submit accept. Call this first when you want a one-shot agent and do not already have an agentId. Use agent_create to define a persistent agent of your own instead.",
    "name": "agent_template_list",
    "title": "List agent templates",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": false,
      "openWorldHint": false,
      "readOnlyHint": false,
    },
    "description": "Queue work for an agent and return a handle immediately, without waiting for the result. Use it for long work, for fan-out you will collect later, or when the job depends on others finishing first; use delegate when you just want one answer now. Follow up with job_wait and job_get.",
    "name": "job_submit",
    "title": "Submit a job",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "Fetch one job with its state, result and usage. The shape is identical whether the work ran locally or on a remote agent. Use job_wait first if the job may still be running, and events_query for the step-by-step trail.",
    "name": "job_get",
    "title": "Get a job",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "List jobs filtered by state, agent or backend, newest first. Use it to survey what is queued or running; use job_get for one job in full. Paginate with the returned nextCursor.",
    "name": "job_list",
    "title": "List jobs",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "Block until the given jobs finish, or until the timeout expires — at most 60 seconds per call. Call it again if the jobs are still running; it never blocks longer than the protocol allows. Use job_get when you only want the current state without waiting.",
    "name": "job_wait",
    "title": "Wait for jobs",
  },
  {
    "annotations": {
      "destructiveHint": true,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": false,
    },
    "description": "Cancel a queued or running job; for remote jobs this cancels the underlying A2A task too. Already-finished jobs are returned unchanged. Use job_retry to run a cancelled job again.",
    "name": "job_cancel",
    "title": "Cancel a job",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": false,
      "openWorldHint": false,
      "readOnlyHint": false,
    },
    "description": "Re-queue a failed, cancelled or timed-out job, clearing the previous attempt result. Succeeded jobs cannot be retried — submit a new job instead. Check the failure with job_get before retrying, since a logic error will simply recur.",
    "name": "job_retry",
    "title": "Retry a job",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": false,
      "openWorldHint": true,
      "readOnlyHint": false,
    },
    "description": "Run one instruction on the best-matching agent and return the result. This is the everyday tool: reach for it whenever you want a sub-agent to do something and hand the answer back. Use job_submit instead when the work is long, has dependencies, or should run in the background, and agent_template_list to see the roles you can target.",
    "name": "delegate",
    "title": "Delegate an instruction",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "Report orchestrator health, version, active tool profile, queue depth and schema state. Use it to confirm the server is reachable and correctly configured, or to check whether migrations are pending. Not for inspecting individual work — use job_get or job_list for that.",
    "name": "orchestrator_status",
    "title": "Orchestrator status",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "List the local execution backends and whether each is usable right now, including missing credentials. Check this when a job fails with RUNNER_FAILED, or before creating an agent that names a specific runner. Remote A2A agents are not runners and never appear here.",
    "name": "runner_list",
    "title": "List runners",
  },
]
`;

exports[`tools/list contract > matches the standard profile snapshot 1`] = `
[
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": false,
      "openWorldHint": false,
      "readOnlyHint": false,
    },
    "description": "Define a persistent local agent the orchestrator owns, prompts and runs. Use it when the same role is needed across many jobs; for a one-shot task pass a template to delegate instead. Register agents built by other vendors with agent_register, not this tool.",
    "name": "agent_create",
    "title": "Create a local agent",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "List agents known to the orchestrator, local and remote together. Use it to discover what can be delegated to; use agent_get for one agent in full. Throwaway agents created by delegate are hidden unless includeEphemeral is set.",
    "name": "agent_list",
    "title": "List agents",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "Fetch one agent with its configuration and recent jobs. Use it to inspect an agent before delegating to it or to see what it has been doing. Use agent_list to find the id first.",
    "name": "agent_get",
    "title": "Get an agent",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "List the built-in role templates that delegate and job_submit accept. Call this first when you want a one-shot agent and do not already have an agentId. Use agent_create to define a persistent agent of your own instead.",
    "name": "agent_template_list",
    "title": "List agent templates",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": false,
      "openWorldHint": false,
      "readOnlyHint": false,
    },
    "description": "Queue work for an agent and return a handle immediately, without waiting for the result. Use it for long work, for fan-out you will collect later, or when the job depends on others finishing first; use delegate when you just want one answer now. Follow up with job_wait and job_get.",
    "name": "job_submit",
    "title": "Submit a job",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "Fetch one job with its state, result and usage. The shape is identical whether the work ran locally or on a remote agent. Use job_wait first if the job may still be running, and events_query for the step-by-step trail.",
    "name": "job_get",
    "title": "Get a job",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "List jobs filtered by state, agent or backend, newest first. Use it to survey what is queued or running; use job_get for one job in full. Paginate with the returned nextCursor.",
    "name": "job_list",
    "title": "List jobs",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "Block until the given jobs finish, or until the timeout expires — at most 60 seconds per call. Call it again if the jobs are still running; it never blocks longer than the protocol allows. Use job_get when you only want the current state without waiting.",
    "name": "job_wait",
    "title": "Wait for jobs",
  },
  {
    "annotations": {
      "destructiveHint": true,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": false,
    },
    "description": "Cancel a queued or running job; for remote jobs this cancels the underlying A2A task too. Already-finished jobs are returned unchanged. Use job_retry to run a cancelled job again.",
    "name": "job_cancel",
    "title": "Cancel a job",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": false,
      "openWorldHint": false,
      "readOnlyHint": false,
    },
    "description": "Re-queue a failed, cancelled or timed-out job, clearing the previous attempt result. Succeeded jobs cannot be retried — submit a new job instead. Check the failure with job_get before retrying, since a logic error will simply recur.",
    "name": "job_retry",
    "title": "Retry a job",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": false,
      "openWorldHint": true,
      "readOnlyHint": false,
    },
    "description": "Run one instruction on the best-matching agent and return the result. This is the everyday tool: reach for it whenever you want a sub-agent to do something and hand the answer back. Use job_submit instead when the work is long, has dependencies, or should run in the background, and agent_template_list to see the roles you can target.",
    "name": "delegate",
    "title": "Delegate an instruction",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "Report orchestrator health, version, active tool profile, queue depth and schema state. Use it to confirm the server is reachable and correctly configured, or to check whether migrations are pending. Not for inspecting individual work — use job_get or job_list for that.",
    "name": "orchestrator_status",
    "title": "Orchestrator status",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "List the local execution backends and whether each is usable right now, including missing credentials. Check this when a job fails with RUNNER_FAILED, or before creating an agent that names a specific runner. Remote A2A agents are not runners and never appear here.",
    "name": "runner_list",
    "title": "List runners",
  },
]
`;
